# deixis

./: README.md  index.html  index.md  params.json
docs/: head_pan_bandit_2.xls
docs/Summer REU 2010/: ARTag.wmv
images/: ARTag.ogv
sw/bag2video/: CMakeLists.txt  mainpage.dox
sw/bag2video/.svn/: all-wcprops  entries
sw/bag2video/src/: read_bag.cpp
sw/deixis/: CMakeLists.txt  angles.cpp  main.cpp  main2.cpp  manifest.xml  mutex.cpp  pose.cpp  random.cpp  test.launch  thread.cpp  time.h  vector.h
sw/deixis/.svn/: all-wcprops  entries
sw/deixis/.svn/text-base/: angles.h.svn-base  log.launch.svn-base  logger.h.svn-base  marker_finder_laser.vcg.svn-base  mutex.h.svn-base  pose.h.svn-base  random.h.svn-base  record_points.cpp.svn-base  record_points.launch.svn-base  thread.h.svn-base  utils.h.svn-base  wiimote.h.svn-base
sw/deixis/data/.svn/: all-wcprops  entries
sw/deixis/data/old/: data00.csv  data01.csv  data02.csv  data09.csv
sw/deixis/data/old/.svn/: all-wcprops  entries
sw/deixis/data/old/.svn/text-base/: data03.csv.svn-base  data07.csv.svn-base
sw/deixis/sounds/.svn/: all-wcprops  entries
sw/lightsaber/: CMakeLists.txt  mainpage.dox  manifest.xml
sw/lightsaber/src/: lightsaber.cpp
sw/marker_finder/: CMakeLists.txt  mainpage.dox  readLaser.launch  scan_shadow_filter.launch  scan_shadow_filter.yaml
sw/mfind_scratch/: .output.txt.swo  CMakeLists.txt  mainpage.dox  manifest.xml
sw/scripts/: GetCalPts.R  add_ids.sh  all_data.csv  error.R  eye_level.ods  makePlot1.R  make_one_file.sh  process.R  process_m.R  test.r
(+45 files in other folders)
